<resources>
    <string name="app_name">Akaarat</string>

    <string name="menu">Menu</string>
    <string name="map">Map</string>
    <string name="search">Search</string>
    <string name="myacc">My Account</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_navigation__drawer">Navigation_Drawer</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="selectstate">Select State</string>
    <string name="selectunitlocation">Select Location</string>
    <string name="select">Select Unit Type</string>
    <string name="details">Details</string>
    <string name="book_unit">Book Unit Now</string>
    <string name="simliar_realstate">Similar Real State</string>
    <string name="advancedsearch">Advanced Search</string>
    <string name="sizearea">Area By Meter</string>
    <string name="numberofrooms">Number Of Rooms</string>
    <string name="pricefrom">Price From</string>
    <string name="priceTo">Price To</string>
    <string name="selectsearchtyp">Select Search Types</string>
    <string name="searchnow">Search Now</string>
    <string name="title_activity_login">Sign in</string>
    <string name="newaccount">New Account</string>
    <string name="username">User Name</string>
    <string name="email">Email</string>
    <string name="phone">Mobile Number</string>
    <string name="national">National ID</string>
    <string name="password">Password</string>
    <string name="create">Sign Up</string>
    <string name="alreadyhaveaccount">Already Have Account ?</string>
    <string name="signnin">Sign In</string>
    <string name="register">Register</string>
    <string name="forgetpass">Forget Password</string>
    <string name="realstate">Real State</string>
    <string name="aboutoffice">About Office</string>
    <string name="branchoffice">Branch Office</string>
    <string name="officelocation">Office Location</string>
    <string name="specialrealstate_office">Special Real Stated For Office</string>
    <string name="myaccount">My Account</string>
    <string name="logout">Log Out</string>
    <string name="addads">Add Ads</string>
    <string name="realstatebit">RealState bit</string>
    <string name="specialrealstate">Special RealState</string>
    <string name="rentcontract">Rent Contract</string>
    <string name="favouritmenu">Favourit Menu</string>
    <string name="newads">Newest Ads</string>
    <string name="requests">Requests</string>
    <string name="aboutus">About Us</string>
    <string name="contactus">Contact Us</string>
    <string name="msg">Message</string>
    <string name="send">Send</string>
    <string name="ownernationaltyid">Owner Nationalty ID</string>
    <string name="tenent">Tenent Nationalty ID</string>
    <string name="servicecontract">This service is for the conclusion of a rental contract approved through the rental system</string>
    <string name="requestcontract">Request a lease contract</string>
    <string name="servicewhatsapp">To expedite the work of the rental contract, please send these documents through the WhatsApp</string>
    <string name="bitrealstate">Bit Now</string>
    <string name="ratenow">Rate Now</string>
    <string name="writecomment">Write Comment</string>
    <string name="lastprice">Last Price</string>
    <string name="startprice">Initial price</string>
    <string name="addnewprice">Add New Price</string>
    <string name="owneroffice">RealState Office</string>
    <string name="ownerrealstate">Owner RealState</string>
    <string name="tenant">Tenant</string>
    <string name="rent">Rent</string>
    <string name="sell">Sell</string>
    <string name="notfoundresult">Not Found Any Result</string>
    <string name="myunits">My Units</string>
    <string name="reservations">Reservations</string>
    <string name="contracts">Contracts</string>
    <string name="requestmaintaninc">Requests Maintenance</string>
    <string name="msgs">Messages</string>
    <string name="acountintransaction">Accounting Transaction</string>
    <string name="benfits">StateMent Transaction</string>
    <string name="purchasing">Purchasing</string>
    <string name="unitdescription">Unit Descrption</string>
    <string name="unitname">Unit Name</string>
    <string name="price">Price</string>
    <string name="address">Address</string>
    <string name="sar">SAR</string>
    <string name="forrent">For Rent</string>
    <string name="forsell">For Sale</string>
    <string name="sellingshreprice">Selling Share Price</string>
    <string name="numberofsharemaining">Number Of Share Remaining</string>
    <string name="numberofsoldshare">Number Of Sold Share</string>
    <string name="shareAria">Share Area</string>
    <string name="booknumberofshares">Book Number Of Shares</string>
    <string name="insertemail">please insert Mail</string>
    <string name="insertpassword">please insert Password</string>
    <string name="insertfirstname">please insert Full Name</string>
    <string name="insertphone">please insert Phone</string>
    <string name="insertnationaltyid">please insert Nationalty Id</string>
    <string name="emailfailed">Email Or User Name is Used</string>
    <string name="wrongemail">User Name Or Password is Wrong</string>
    <string name="realstatesoffice">RealState Office</string>
    <string name="rating">Rating</string>
    <string name="fullname">Full Name</string>
    <string name="login">Login</string>
    <string name="registersuccess">Successfully Registered</string>
    <string name="loginsuccess">Login Success</string>
    <string name="booksuccess">The Unit booked successfully </string>
    <string name="failed">Failed</string>
    <string name="initialshareprice">Initial Share Price</string>
    <string name="lastshareprice">Last Share price</string>
    <string name="entershareprice">Enter Share Price</string>
    <string name="numberofshares">Number Of Shares</string>
    <string name="numberofsharesentered">Number of shares Entered Bigger than Number of shares Available</string>
    <string name="expectedstartdate">Expected Start Date</string>
    <string name="rentime">Rent Time</string>
    <string name="renttype">PayMent Methods</string>
    <string name="day">Day</string>
    <string name="month">Month</string>
    <string name="year">Year</string>
    <string name="paymenttype">PayMent Methods</string>
    <string name="buy">Buy</string>
    <string name="rentcrontract">Rent Contract</string>
    <string name="sellcontract">Sell contracts</string>
    <string name="title">Title</string>
    <string name="subject">Subject</string>
    <string name="from">From</string>
</resources>
