<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/main"
        android:icon="@drawable/ic_map"
        app:showAsAction="ifRoom"
        android:title="@string/map"
        />
    <item
        android:icon="@drawable/ic_tab_menu"
        app:showAsAction="ifRoom"
        android:id="@+id/order"
        android:title="@string/menu"
        />
    <item
        android:title="@string/search"
        android:id="@+id/account"
        android:icon="@drawable/ic_search"
        app:showAsAction="ifRoom"/>
    <item
        android:title="@string/myacc"
        android:id="@+id/more"
        android:icon="@drawable/ic_profile"
        app:showAsAction="ifRoom"/>
</menu>