<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="#f8fcff"
    tools:context=".Fragments.Contact_Us">
    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="#0691de"
        android:layout_marginTop="@dimen/_10sdp"
        app:popupTheme="@style/PopupOverlay">
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <!--<ImageView-->
            <!--android:layout_width="@dimen/_30sdp"-->
            <!--android:layout_height="@dimen/_30sdp"-->
            <!--android:src="@drawable/ic_nav"-->
            <!--/>-->
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:textSize="@dimen/_18sdp"
                android:layout_marginTop="@dimen/_10sdp"
                android:text="@string/requestcontract"
                android:textStyle="bold"
                android:id="@+id/select_state"
                />



        </RelativeLayout>

    </androidx.appcompat.widget.Toolbar>
    <ImageView
        android:layout_width="match_parent"
        android:layout_height="@dimen/_150sdp"
        android:id="@+id/img_contact"
        android:layout_below="@+id/toolbar"
        android:background="@drawable/ic_contact_banner"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="@dimen/_30sdp"
        android:layout_below="@+id/img_contact"
        android:layout_marginTop="@dimen/_20sdp"
        android:background="@drawable/bs_spinner_search"
        android:hint="@string/email"
        android:textColorHint="#bcbcbc"
        android:inputType="textEmailAddress"
        android:maxLength="5"
        android:layout_marginLeft="@dimen/_15sdp"
        android:layout_marginRight="@dimen/_15sdp"
        android:id="@+id/E_Email"
        android:textSize="@dimen/_12sdp"
        android:paddingLeft="@dimen/_10sdp"
        />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="@dimen/_30sdp"
        android:layout_below="@+id/E_Email"
        android:layout_marginTop="@dimen/_20sdp"
        android:background="@drawable/bs_spinner_search"
        android:hint="@string/email"
        android:textColorHint="#bcbcbc"
        android:inputType="number"
        android:maxLength="5"
        android:layout_marginLeft="@dimen/_15sdp"
        android:layout_marginRight="@dimen/_15sdp"
        android:id="@+id/E_Phone"
        android:textSize="@dimen/_12sdp"
        android:paddingLeft="@dimen/_10sdp"
        />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="@dimen/_30sdp"
        android:layout_below="@+id/E_Phone"
        android:layout_marginTop="@dimen/_20sdp"
        android:background="@drawable/bs_spinner_search"
        android:hint="@string/msg"
        android:textColorHint="#bcbcbc"
        android:inputType="number"
        android:maxLength="5"
        android:layout_marginLeft="@dimen/_15sdp"
        android:layout_marginRight="@dimen/_15sdp"
        android:id="@+id/E_Message"
        android:textSize="@dimen/_12sdp"
        android:paddingLeft="@dimen/_10sdp"
        />

    <Button
        android:layout_width="match_parent"
        android:layout_height="@dimen/_40sdp"
        android:layout_below="@+id/E_Message"
        android:layout_marginTop="@dimen/_50sdp"
        android:background="#0591de"
        android:text="@string/send"
        android:textSize="@dimen/_16sdp"
        android:textStyle="bold"
        android:textAllCaps="false" />





</RelativeLayout>