<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#f8fcff"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".Fragments.About_office">

    <androidx.cardview.widget.CardView
    android:layout_width="match_parent"
    android:layout_height="@dimen/_90sdp"
    app:cardBackgroundColor="#fff"
    app:cardCornerRadius="@dimen/_3sdp"
    app:cardElevation="@dimen/_5sdp"
    android:id="@+id/office"
    android:layout_marginLeft="@dimen/_10sdp"
    android:layout_marginRight="@dimen/_10sdp"
    android:layout_marginTop="@dimen/_10sdp">

    <RelativeLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content">
    <TextView
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:text="@string/aboutoffice"
    android:layout_marginTop="@dimen/_10sdp"
    android:textStyle="bold"
    android:textColor="#0691de"
    android:layout_marginLeft="@dimen/_10sdp"
    android:id="@+id/about"
    />
    <TextView
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_marginTop="@dimen/_10sdp"
    android:textStyle="bold"
    android:textColor="#b5b5b5"
    android:layout_marginLeft="@dimen/_10sdp"
    android:id="@+id/Descrption"
    android:layout_below="@+id/about"
    android:maxLines="3"
    />


    </RelativeLayout>




    </androidx.cardview.widget.CardView>


    <androidx.cardview.widget.CardView
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    app:cardBackgroundColor="#fff"
    app:cardCornerRadius="@dimen/_3sdp"
    app:cardElevation="@dimen/_5sdp"
    android:layout_below="@+id/office"
    android:id="@+id/card_branches"
    android:layout_marginLeft="@dimen/_10sdp"
    android:layout_marginRight="@dimen/_10sdp"
    android:layout_marginTop="@dimen/_10sdp">

    <RelativeLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content">
    <TextView
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:text="@string/branchoffice"
    android:layout_marginTop="@dimen/_10sdp"
    android:textStyle="bold"
    android:textColor="#0691de"
    android:layout_marginLeft="@dimen/_10sdp"
    android:id="@+id/branch"
    />

    <androidx.recyclerview.widget.RecyclerView
    android:id="@+id/recycler_Branchoffice"
    android:scrollbars="vertical"
    android:layout_marginTop="@dimen/_10sdp"
    android:layout_marginBottom="@dimen/_20sdp"
    android:layout_marginRight="@dimen/_10sdp"
    android:layout_marginLeft="@dimen/_10sdp"
    android:layout_below="@+id/branch"
    android:layout_width="match_parent"
    android:layout_height="@dimen/_50sdp"/>

    </RelativeLayout>

    </androidx.cardview.widget.CardView>

    <TextView
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_below="@+id/card_branches"
    android:id="@+id/T_Location"
    android:text="@string/officelocation"
    android:textColor="#0691de"
    android:layout_marginTop="@dimen/_10sdp"
    android:layout_marginLeft="@dimen/_10sdp"
    android:textStyle="bold"
    />

    <fragment
    android:id="@+id/MMap"
    android:name="com.google.android.gms.maps.SupportMapFragment"
    android:layout_width="match_parent"
    android:background="#00000000"
    android:layout_marginTop="@dimen/_10sdp"
    android:layout_below="@+id/T_Location"
    android:layout_height="@dimen/_120sdp"/>




</RelativeLayout>